# ted-z

./: .gitignore  LICENSE  README.md  bot_settings.toml.example  pyproject.toml
ted-z/: __main__.py  bot.py
ted-z/files/: eb_responses.txt
ted-z/plugins/: admin.py  fun.py  games.py  images.py  ping.py  rand.py  react.py  translate.py
ted-z/plugins/files/: langcodes.json  slaps.txt
ted-z/util/: helper.py
ted-z/utils/: opening.py  web.py
