[tool.poetry]
name = "ted-z"
version = "1.0.0"
description = "Just another Discord bot written in Python! (this is the last revision i swear)"
authors = ["Alex The JPEG <alexthejpeg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
hikari-lightbulb = "^2.3.1"
hikari-miru = "^2.0.1"
requests = "^2.28.1"
argostranslate = "^1.7.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
