[tool.poetry]
name = "ted-z"
version = "2.0.0"
description = "Just another Discord bot written in Python! (this is the last revision i swear)"
authors = ["Alex The JPEG <alexthejpeg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
hikari-lightbulb = "^2.3.1"
hikari-miru = "^2.0.1"
requests = "^2.28.1"
libretranslatepy = "^2.1.3"
pillow = "^9.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.black]
line-length = 99
experimental-string-processing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
